--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
             padding: 20px;
         }
         .container {
-            max-width: 200px;
+            max-width: 400px;
             background: rgba(255, 255, 255, 0.1);
             border-radius: 15px;
             padding: 20px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
             backdrop-filter: blur(10px);
-            margin: auto;
+            margin: 200px;
         }
         .game-button {
             background: #ffcc00;
