--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             font-size: 18px;
             cursor: pointer;
             border-radius: 8px;
-            margin: 10px;
+            margin: auto;
         }
         .game-button:hover {
             background: #ffdd33;
