--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fun Games</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
+    <style class="container">
+        margin 100px;
+    </style>
 </head>
 <body>
     <div class="container">
