--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     </style>
 </head>
 <body>
-    <h1>Hello World</h1>
+    <h1>NOT FOUND 404</h1>
+    <p style="text-align: center;">400</p>
 </body>
 </html>
