--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello World</title>
+    <title>Web App Tamirlanmoqda</title>
     <style>
         /* Ekranda markazga joylashtirish */
         body, html {
@@ -14,10 +14,17 @@
             align-items: center;
             font-family: Arial, sans-serif;
             background-color: #f0f0f0;
+            color: #333;
+        }
+        h1 {
+            text-align: center;
+            font-size: 24px;
+            font-weight: bold;
+            color: #e74c3c;
         }
     </style>
 </head>
 <body>
-    <h1>NOT FOUND 404</h1>
+    <h1>⚠️ Web app tamirlanmoqda ⚠️<br>404</h1>
 </body>
 </html>
