--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             text-align: center;
             font-size: 24px;
             font-weight: bold;
-            color: #00000000;
+            color: #00;
         }
     </style>
 </head>
