--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
     </style>
 </head>
 <body>
-    <h1>⚠️ Web app tamirlanmoqda ⚠️<br>404</h1>
+    <h1>🚧 Xozircha tamirda 🚧<br>404</h1>
 </body>
 </html>
