--- a/index.html
+++ b/index.html
@@ -31,25 +31,7 @@
     </style>
 </head>
 <body>
-    <h1>🚧 Xozircha tamirda 🚧<br>404</h1>
-    <div id="timer">Vaqt: 10</div>
-
-    <script>
-        let timerElement = document.getElementById('timer');
-        let timeLeft = 10;  // Boshlang‘ich vaqt (sekundda)
-
-        function updateTimer() {
-            if (timeLeft >= 0) {  // Agar vaqt hali tugamagan bo‘lsa
-                timerElement.innerText = 'Vaqt: ' + timeLeft;
-                timeLeft--; // Sekundni kamaytirish
-            } else {
-                timerElement.innerText = 'Vaqt tugadi!';
-                clearInterval(timerInterval); // Sanash tugadi, intervalni to‘xtatish
-            }
-        }
-
-        // Har bir sekundda `updateTimer()` funksiyasini chaqirish
-        let timerInterval = setInterval(updateTimer, 1000);
-    </script>
+    <h1>🚧 Xozircha tamirda 🚧<br>404 funksiyaning tuliq ishlab chiqish sanasi:07.02.2025</h1>
+   
 </body>
 </html>
