--- a/index.html
+++ b/index.html
@@ -22,16 +22,19 @@
             font-weight: bold;
             color: #333;
         }
-        #timer {
-            font-size: 18px;
-            margin-top: 20px;
+        h2 {
+            text-align: center;
+            font-size: 24px;
             font-weight: bold;
-            color: #e74c3c;
+            color: #333;
+            
         }
+       
     </style>
 </head>
 <body>
-    <h1>🚧 Xozircha tamirda 🚧<br>404 funksiyaning tuliq ishlab chiqish sanasi:07.02.2025</h1>
+    <h1>🚧 Xozircha tamirda 🚧<br>404</h1>
+    <h2> funksiyaning tuliq ishlab chiqish sanasi:07.02.2025 </h2>
    
 </body>
 </html>
