--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             font-weight: bold;
             color: #333;
         }
-        h2 {
+        br {
             text-align: center;
             font-size: 24px;
             font-weight: bold;
@@ -34,7 +34,7 @@
 </head>
 <body>
     <h1>🚧 Xozircha tamirda 🚧<br>404</h1>
-    <h2> funksiyaning tuliq ishlab chiqish sanasi:07.02.2025 </h2>
+    <br> funksiyaning tuliq ishlab chiqish sanasi:07.02.2025 </br>
    
 </body>
 </html>
