--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
     </style>
 </head>
 <body>
-    <h1>🚧 Xozircha tamirda 🚧<br>404</h1>
-    <br> funksiyaning tuliq ishlab chiqish sanasi:07.02.2025 </br>
+    <h1>🚧 Xozircha tamirda 🚧<br>404 <br> funksiyaning tuliq ishlab chiqish sanasi:07.02.2025 </br></h1>
+    
    
 </body>
 </html>
