--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             color: #333;
         }
         br {
+            text-align: bottom;
             font-size: 10px;
             font-weight: bold;
             color: #333;
@@ -32,7 +33,8 @@
     </style>
 </head>
 <body>
-    <h1>🚧 Xozircha tamirda 🚧<br>404 <br> funksiyaning tuliq ishlab chiqish sanasi:07.02.2025 </br></h1>
+    <h1>🚧 Xozircha tamirda 🚧<br>404 </h1>
+    <br> funksiyaning tuliq ishlab chiqish sanasi:07.02.2025 </br>
     
    
 </body>
