--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </style>
 </head>
 <body>
-    <h1>Mines Game</h1>
+    <h1>07.02.2025ga yangilanadi!</h1>
     <div id="gameBoard"></div>
     <div class="status" id="status">Maydonni tanlang!</div>
 
